--- a/src/main/resources/templates/editMember.html
+++ b/src/main/resources/templates/editMember.html
@@ -15,32 +15,43 @@
     <div class="columnsidebar" th:insert="fragments/sidebar :: sidebar"></div>
 
     <div class="column container">
-        <form action="/editedMember" method="post" >
-            <input th:type="hidden" th:value="${member.getId()}"  name="id">
+        <div th:if="${loginstatus == 'no' || loginstatus == null}">
+            <form method="post" action="/login">
+                <label>Username</label>
+                <input type="text" name="username" id="name" placeholder="Username" required><br>
+                <label>Password</label>
+                <input type="password" name="password" id="password" placeholder="Password" required><br>
+                <input type="submit" value="Login">
+            </form>
+        </div>
+        <div th:if="${loginstatus == 'yes'}">
+            <form action="/editedMember" method="post" >
+                <input th:type="hidden" th:value="${member.getId()}"  name="id">
 
-            <label for="firstName">Fornavn</label>
-            <input th:type="text" th:value="${member.firstName}" id="firstName" name="firstName">
+                <label for="firstName">Fornavn</label>
+                <input th:type="text" th:value="${member.firstName}" id="firstName" name="firstName">
 
-            <label for="lastName">Efternavn</label>
-            <input th:type="text" th:value="${member.lastName}" id="lastName" name="lastName">
+                <label for="lastName">Efternavn</label>
+                <input th:type="text" th:value="${member.lastName}" id="lastName" name="lastName">
 
-            <label for="isFemale">Kvinde, 1 for ja.</label>
-            <input th:type="number" th:value="${member.isFemale}" id="isFemale" name="isFemale">
+                <label for="isFemale">Kvinde, 1 for ja.</label>
+                <input th:type="number" th:value="${member.isFemale}" id="isFemale" name="isFemale">
 
-            <label for="mail">e-mail addresse</label>
-            <input th:type="mail" th:value="${member.mail}" id="mail" name="mail">
+                <label for="mail">e-mail addresse</label>
+                <input th:type="mail" th:value="${member.mail}" id="mail" name="mail">
 
-            <label for="startDate">Indmeldingsdato</label>
-            <input th:type="date" th:value="*{{member.startDate}}" id="startDate" name="startDate">
+                <label for="startDate">Indmeldingsdato</label>
+                <input th:type="date" th:value="*{{member.startDate}}" id="startDate" name="startDate">
 
-            <label for="birthday">Fødselsdag</label>
-            <input th:type="date" th:value="*{{member.birthday}}" id="birthday" name="birthday">
+                <label for="birthday">Fødselsdag</label>
+                <input th:type="date" th:value="*{{member.birthday}}" id="birthday" name="birthday">
 
-            <label for="phoneNumber">Telefonnummer</label>
-            <input th:type="number" th:value="${member.phoneNumber}" id="phoneNumber" name="phoneNumber">
+                <label for="phoneNumber">Telefonnummer</label>
+                <input th:type="number" th:value="${member.phoneNumber}" id="phoneNumber" name="phoneNumber">
 
-            <input th:type="submit" class="btn" th:value="Gem" id="submit" th:name="submit">
-        </form>
+                <input th:type="submit" class="btn" th:value="Gem" id="submit" th:name="submit">
+            </form>
+        </div>
     </div>
 </div>
 
