Tilføjet adminlogin og create funktioner til login så man kan lave nye login, har også lavet en stor del af trainer repo sammen med jonas, så der nu er et fungerende timeregestreingssystem. Har også rettet små stavefejl og oversat få steder af gui til dansk

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
             </form>
         </div>
         <div th:if="${loginstatus == 'yes'}">
-            <p style="color: white">Your are logged in</p>
+            <p style="color: white">Du er logget ind</p>
         </div>
     </div>
 
