--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -21,6 +21,10 @@
             </li>
             <li><a href="/calendar" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/calendar') ? 'active':''}">Kalender</a>
             </li>
+            <li><a href="/createLogin" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/createLogin') ? 'active':''}">Opret login</a>
+            </li>
+            <li><a href="/hours" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/hours') ? 'active':''}">Timeoversigt</a>
+            </li>
         </ul>
         </div>
     </nav>
