tilføjet crud til trænere

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -23,7 +23,7 @@
             </li>
             <li><a href="/createLogin" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/createLogin') ? 'active':''}">Opret login</a>
             </li>
-            <li><a href="/hours" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/hours') ? 'active':''}">Timeoversigt</a>
+            <li><a href="/hours" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/hours') ? 'active':''}">Træneroversigt</a>
             </li>
         </ul>
         </div>
